--- a/views/cars.handlebars
+++ b/views/cars.handlebars
@@ -28,44 +28,90 @@
 <br>
 <p class="text-center">This is the page where you can view the cars in the database along with relevant information</p>
 
+<div class="container">
+  <div class="row justify-content-md-center">
+		<div class="col-md-auto">
+			<form>
+				<div class="form-row align-items-center">
+					<h3>Search cars by manufacturer: </h3>
+					<div class="col-auto">
+						<label class="sr-only" for="search">search</label>
+						<input type="text" class="form-control" id="iMake" placeholder="Honda">
+					</div>
+					<div class="col-auto">
+						<button type="submit" class="btn btn-primary mb-2">Search</button>
+					</div>
+				</div>
+			</form>
+		</div>
+	</div>
+</div>
 
 <div class="container">
-  <div class="row">
-    <div class="col-sm">
-		<h3>Add Cars</h3>
-		<form>
-		  <div class="form-group">
-			<label for="cid">Car ID:</label>
-			<input type="text" class="form-control" id="cid">
-		  </div>
-		  <div class="form-group">
-			<label for="cMake">Make:</label>
-			<input type="text" class="form-control" id="cMake">
-		  </div>
-		  <div class="form-group">
-			<label for="cModel">Model:</label>
-			<input type="text" class="form-control" id="cModel">
-		  </div>
-		  <div class="form-group">
-			<label for="cYear">Year:</label>
-			<input type="text" class="form-control" id="cYear">
-		  </div>
-		  <div class="form-group">
-			<label for="cPrice">Price:</label>
-			<input type="text" class="form-control" id="cPrice">
-		  </div>
-		  <div class="form-group">
-			<label for="did">Dealership ID:</label>
-			<input type="text" class="form-control" id="did">
-		  </div>
-		  <button type="submit" class="btn btn-primary">Submit</button>
-		</form>
-    </div>
-    <div class="col-sm">
-      
-    </div>
-    <div class="col-sm">
-      
-    </div>
-  </div>
+	<div class="jumbotron">
+	  <div class="row">
+	    <div class="col-sm">
+			<h3>Add Cars</h3>
+			<form>
+			  <div class="form-group">
+				<label for="cid">Car ID:</label>
+				<input type="text" class="form-control" id="cid">
+			  </div>
+			  <div class="form-group">
+				<label for="cMake">Make:</label>
+				<input type="text" class="form-control" id="cMake">
+			  </div>
+			  <div class="form-group">
+				<label for="cModel">Model:</label>
+				<input type="text" class="form-control" id="cModel">
+			  </div>
+			  <div class="form-group">
+				<label for="cYear">Year:</label>
+				<input type="text" class="form-control" id="cYear">
+			  </div>
+			  <div class="form-group">
+				<label for="cPrice">Price:</label>
+				<input type="text" class="form-control" id="cPrice">
+			  </div>
+			  <div class="form-group">
+				<label for="did">Dealership ID:</label>
+				<input type="text" class="form-control" id="did">
+			  </div>
+			  <button type="submit" class="btn btn-primary">Submit</button>
+			</form>
+	    </div>
+	    <div class="col-sm">
+				<h3>Cars</h3>
+				<table class="table table-striped">
+				  <thead>
+				    <tr>
+				      <th scope="col">ID</th>
+				      <th scope="col">Make</th>
+				      <th scope="col">Model</th>
+				      <th scope="col">Year</th>
+							<th scope="col">Price</th>
+							<th scope="col">Dealership</th>
+							<th scope="col">Edit</th>
+							<th scope="col">Delete</th>
+				    </tr>
+				  </thead>
+				  <tbody>
+				    <tr>
+				      <th scope="row">1</th>
+				      <td>Honda</td>
+				      <td>Civic</td>
+				      <td>2020</td>
+							<td>$20000</td>
+							<td>Honda Corvallis</td>
+							<td><button type="button" class="btn btn-secondary">Edit</button></td>
+							<td><button type="button" class="btn btn-danger">Delete</button></td>
+				    </tr>
+				  </tbody>
+				</table>
+	    </div>
+	    <div class="col-sm">
+
+	    </div>
+	  </div>
+	</div>
 </div>
