Added tables each page

--- a/views/cars.handlebars
+++ b/views/cars.handlebars
@@ -80,7 +80,7 @@
 			  <button type="submit" class="btn btn-primary">Submit</button>
 			</form>
 	    </div>
-	    <div class="col-sm">
+	    <div class="col-lg-auto">
 				<h3>Cars</h3>
 				<table class="table table-striped">
 				  <thead>
@@ -91,8 +91,6 @@
 				      <th scope="col">Year</th>
 							<th scope="col">Price</th>
 							<th scope="col">Dealership</th>
-							<th scope="col">Edit</th>
-							<th scope="col">Delete</th>
 				    </tr>
 				  </thead>
 				  <tbody>
