--- a/views/customers.handlebars
+++ b/views/customers.handlebars
@@ -32,34 +32,58 @@ This is the customer page
 </p>
 
 <div class="container">
-  <div class="row">
-    <div class="col-sm">
-		<h3>Add Customer</h3>
-		<form>
-		  <div class="form-group">
-			<label for="did">Dealership ID:</label>
-			<input type="text" class="form-control" id="did">
-		  </div>
-		  <div class="form-group">
-			<label for="tid">Transaction ID:</label>
-			<input type="text" class="form-control" id="tid">
-		  </div>
-		  <div class="form-group">
-			<label for="fName">First Name:</label>
-			<input type="text" class="form-control" id="fName">
-		  </div>
-		  <div class="form-group">
-			<label for="lName">Last Name:</label>
-			<input type="text" class="form-control" id="lName">
-		  </div>
-		  <button type="submit" class="btn btn-primary">Submit</button>
-		</form>
-    </div>
-    <div class="col-sm">
-      
-    </div>
-    <div class="col-sm">
-      
-    </div>
-  </div>
+	<div class="jumbotron">
+	  <div class="row">
+	    <div class="col-sm">
+			<h3>Add Customer</h3>
+			<form>
+			  <div class="form-group">
+				<label for="did">Dealership ID:</label>
+				<input type="text" class="form-control" id="did">
+			  </div>
+			  <div class="form-group">
+				<label for="tid">Transaction ID:</label>
+				<input type="text" class="form-control" id="tid">
+			  </div>
+			  <div class="form-group">
+				<label for="fName">First Name:</label>
+				<input type="text" class="form-control" id="fName">
+			  </div>
+			  <div class="form-group">
+				<label for="lName">Last Name:</label>
+				<input type="text" class="form-control" id="lName">
+			  </div>
+			  <button type="submit" class="btn btn-primary">Submit</button>
+			</form>
+	    </div>
+	    <div class="col-lg-auto">
+				<h3>Customers</h3>
+				<table class="table table-striped">
+					<thead>
+						<tr>
+							<th scope="col">ID</th>
+							<th scope="col">First Name</th>
+							<th scope="col">Last Name</th>
+							<th scope="col">Transaction ID</th>
+							<th scope="col">Dealership</th>
+						</tr>
+					</thead>
+					<tbody>
+						<tr>
+							<th scope="row">1</th>
+							<td>Joe</td>
+							<td>Mama</td>
+							<td>4206969</td>
+							<td>Honda Corvallis</td>
+							<td><button type="button" class="btn btn-secondary">Edit</button></td>
+							<td><button type="button" class="btn btn-danger">Delete</button></td>
+						</tr>
+					</tbody>
+				</table>
+			</div>
+	    <div class="col-sm">
+
+	    </div>
+	  </div>
+	</div>
 </div>
