--- a/views/employees.handlebars
+++ b/views/employees.handlebars
@@ -29,38 +29,58 @@
 <p class="text-center">This is the page where you can view the employees in the database along with relevant information</p>
 
 <div class="container">
-  <div class="row">
-    <div class="col-sm">
-		<h3>Add Employees</h3>
-		<form>
-		  <div class="form-group">
-			<label for="fName">First Name:</label>
-			<input type="text" class="form-control" id="fName">
-		  </div>
-		  <div class="form-group">
-			<label for="lName">Last Name:</label>
-			<input type="text" class="form-control" id="lName">
-		  </div>
-		  <div class="form-group">
-			<label for="did">Dealership ID:</label>
-			<input type="text" class="form-control" id="did">
-		  </div>
-		  <div class="form-group">
-			<label for="eid">Employee ID:</label>
-			<input type="text" class="form-control" id="eid">
-		  </div>
-		  <div class="form-group">
-			<label for="eType">Employee Type:</label>
-			<input type="text" class="form-control" id="eType">
-		  </div>
-		  <button type="submit" class="btn btn-primary">Submit</button>
-		</form>
-    </div>
-    <div class="col-sm">
-      
-    </div>
-    <div class="col-sm">
-      
-    </div>
-  </div>
+	<div class="jumbotron">
+	  <div class="row">
+	    <div class="col-sm">
+			<h3>Add Employees</h3>
+			<form>
+			  <div class="form-group">
+				<label for="fName">First Name:</label>
+				<input type="text" class="form-control" id="fName">
+			  </div>
+			  <div class="form-group">
+				<label for="lName">Last Name:</label>
+				<input type="text" class="form-control" id="lName">
+			  </div>
+			  <div class="form-group">
+				<label for="did">Dealership ID:</label>
+				<input type="text" class="form-control" id="did">
+			  </div>
+			  <div class="form-group">
+				<label for="eType">Employee Type:</label>
+				<input type="text" class="form-control" id="eType">
+			  </div>
+			  <button type="submit" class="btn btn-primary">Submit</button>
+			</form>
+	    </div>
+	    <div class="col-lg-auto">
+				<h3>Cars</h3>
+				<table class="table table-striped">
+					<thead>
+						<tr>
+							<th scope="col">ID</th>
+							<th scope="col">First Name</th>
+							<th scope="col">Last Name</th>
+							<th scope="col">Dealership</th>
+							<th scope="col">Type</th>
+						</tr>
+					</thead>
+					<tbody>
+						<tr>
+							<th scope="row">1</th>
+							<td>Sarah</td>
+							<td>Johnson</td>
+							<td>Honda Corvallis</td>
+							<td>Sales</td>
+							<td><button type="button" class="btn btn-secondary">Edit</button></td>
+							<td><button type="button" class="btn btn-danger">Delete</button></td>
+						</tr>
+					</tbody>
+				</table>
+	    </div>
+	    <div class="col-sm">
+
+	    </div>
+	  </div>
+	</div>
 </div>
