Fixed Table names

--- a/views/dealerships.handlebars
+++ b/views/dealerships.handlebars
@@ -51,7 +51,7 @@
 			</form>
 	    </div>
 	    <div class="col-lg-auto">
-				<h3>Cars</h3>
+				<h3>Dealerships</h3>
 				<table class="table table-striped">
 					<thead>
 						<tr>
