--- a/views/employees.handlebars
+++ b/views/employees.handlebars
@@ -54,7 +54,7 @@
 			</form>
 	    </div>
 	    <div class="col-lg-auto">
-				<h3>Cars</h3>
+				<h3>Employees</h3>
 				<table class="table table-striped">
 					<thead>
 						<tr>
