--- a/views/transactions.handlebars
+++ b/views/transactions.handlebars
@@ -37,7 +37,7 @@ Transactions may not be removed due to the ledger style.
 	  <div class="row">
 	    <div class="col-sm">
 			<h3>Add Transaction</h3>
-			<form>
+			<form id="addTransaction" action="/transactions" method="post">
 			  <div class="form-group">
 				<label for="did">Dealership ID:</label>
 				<input type="text" class="form-control" name="dealership_ID">
