--- a/views/employees.handlebars
+++ b/views/employees.handlebars
@@ -71,7 +71,7 @@
 							<th scope="row">{{id}}</th>
 							<td>{{fName}}</td>
 							<td>{{lName}}</td>
-							<td>{{dealership_ID}}</td>
+							<td>{{name}}</td>
 							<td>{{type}}</td>
 							<td><a class="btn btn-secondary" href="/employees/{{id}}" role="button">Edit</a></td>
 							<td><button type="button" class="btn btn-danger" onClick="deleteEmployee({{id}})">Delete</button></td>
