--- a/views/transactions.handlebars
+++ b/views/transactions.handlebars
@@ -77,9 +77,9 @@ Transactions may not be removed due to the ledger style.
 						{{#each transactions}}
 						<tr>
 							<th scope="row">{{id}}</th>
-							<td>{{dealership_ID}}</td>
+							<td>{{name}}</td>
 							<td>{{car_ID}}</td>
-							<td>{{customer_ID}}</td>
+							<td>{{fName}}</td>
 							<td>{{date}}</td>
 							<td><a class="btn btn-secondary" href="/transactions/{{id}}" role="button">Edit</a></td>
 						</tr>
