--- a/views/update_employee.handlebars
+++ b/views/update_employee.handlebars
@@ -36,11 +36,11 @@
 		<form id='update-employee' action='/employees' method='post'>
 			<div class="form-group">
 			<label for="cMake">First Name:</label>
-			<input type="text" class="form-control" name="fname" value="{{employee.fname}}">
+			<input type="text" class="form-control" name="fname" value="{{employee.fName}}">
 			</div>
 			<div class="form-group">
 			<label for="cModel">Last Name:</label>
-			<input type="text" class="form-control" name="lname" value="{{employee.lname}}">
+			<input type="text" class="form-control" name="lname" value="{{employee.lName}}">
 			</div>
 			<div class="form-group">
 			<label for="cYear">Dealership ID:</label>
